--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "fs-extra": "^9.0.1",
+    "lodash-id": "^0.14.0",
+    "lowdb": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "^12.12.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
